--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,6 @@
 *.o
 *.sh
 *.v
-*.tcl
 */**/*.o
 
 build
@@ -14,6 +13,8 @@ build/*
 
 src/output
 src/output/*
+
+test/*/exp
 
 CMakeCache.txt
 CMakeFiles
