Update eigen module pointer

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,3 @@
-[submodule "module/eigen-git-mirror"]
-	path = module/eigen-git-mirror
-  url = https://github.com/eigenteam/eigen-git-mirror.git
-  branch = branches/3.3
 [submodule "module/lef"]
 	path = module/lef
 	url = https://github.com/The-OpenROAD-Project/lef
@@ -11,3 +7,6 @@
 [submodule "module/OpenSTA"]
 	path = module/OpenSTA
 	url = https://github.com/The-OpenROAD-Project/OpenSTA.git
+[submodule "module/eigen"]
+	path = module/eigen
+	url = https://gitlab.com/libeigen/eigen.git
