--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,9 @@
-[submodule "module/lef"]
-	path = module/lef
-	url = https://github.com/The-OpenROAD-Project/lef
-[submodule "module/def"]
-	path = module/def
-	url = https://github.com/The-OpenROAD-Project/def
 [submodule "module/OpenSTA"]
 	path = module/OpenSTA
 	url = https://github.com/The-OpenROAD-Project/OpenSTA.git
 [submodule "module/eigen"]
 	path = module/eigen
 	url = https://gitlab.com/libeigen/eigen.git
+[submodule "module/OpenDB"]
+	path = module/OpenDB
+	url = https://github.com/The-OpenROAD-Project/OpenDB
