--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -128,6 +128,9 @@ target_link_libraries( mplace
   ${ZLIB_LIBRARIES}
   ${TCL_LIB}
   Threads::Threads
+  
+  # at standalone mode
+  opendb
   )
 
 ############################################################
