--- a/jenkins/Dockerfile.dev
+++ b/jenkins/Dockerfile.dev
@@ -20,7 +20,7 @@ ENV PATH=/opt/rh/rh-mongodb32/root/usr/bin:$PATH \
 
 RUN wget http://prdownloads.sourceforge.net/swig/swig-4.0.1.tar.gz && \
     tar zxvf swig-4.0.1.tar.gz && \
-    cd swig-4.0.1.tar.gz && \
+    cd swig-4.0.1 && \
     ./configure --prefix=/usr/local && \
     make && make install
 
