--- a/jenkins/Dockerfile.dev
+++ b/jenkins/Dockerfile.dev
@@ -21,7 +21,7 @@ ENV PATH=/opt/rh/rh-mongodb32/root/usr/bin:$PATH \
 RUN wget http://prdownloads.sourceforge.net/swig/swig-4.0.1.tar.gz && \
     tar zxvf swig-4.0.1.tar.gz && \
     cd swig-4.0.1 && \
-    ./configure --prefix=/usr/local && \
+    ./configure --prefix=/usr/local --without-pcre && \
     make && make install
 
 #RUN yum -y install centos-release-scl
