--- a/jenkins/Dockerfile.dev
+++ b/jenkins/Dockerfile.dev
@@ -1,10 +1,16 @@
 FROM centos:centos7 AS base-dependencies
 
 # install gcc 
-RUN yum -y install centos-release-scl 
+RUN yum -y install centos-release-scl && \
+    yum -y install devtoolset-6 devtoolset-6-libatomic-devel
+ENV CC=/opt/rh/devtoolset-6/root/usr/bin/gcc \
+    CPP=/opt/rh/devtoolset-6/root/usr/bin/cpp \
+    CXX=/opt/rh/devtoolset-6/root/usr/bin/g++ \
+    PATH=/opt/rh/devtoolset-6/root/usr/bin:$PATH \
+    LD_LIBRARY_PATH=/opt/rh/devtoolset-6/root/usr/lib64:/opt/rh/devtoolset-6/root/usr/lib:/opt/rh/devtoolset-6/root/usr/lib64/dyninst:/opt/rh/devtoolset-6/root/usr/lib/dyninst:/opt/rh/devtoolset-6/root/usr/lib64:/opt/rh/devtoolset-6/root/usr/lib:$LD_LIBRARY_PATH
 
 # install dependencies
-RUN yum install -y gcc gcc-c++ make wget git boost-devel zlib-devel tcl-devel tk-devel swig bison flex
+RUN yum install -y make wget git boost-devel zlib-devel tcl-devel tk-devel swig bison flex
 
 # Install python dev
 RUN yum install -y https://centos7.iuscommunity.org/ius-release.rpm && \
