Rename _external as top class and block SWIG include

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,7 +51,7 @@ set(MPLACE_TCL_INIT ${CMAKE_CURRENT_BINARY_DIR}/TritonMpTclInitVar.cc)
 add_custom_command(OUTPUT ${MPLACE_WRAP}
   COMMAND ${SWIG_EXECUTABLE} -tcl8 -c++ -o ${MPLACE_WRAP} -I${MPLACE_HOME}/include ${MPLACE_HOME}/src/macroPlace.i   
   WORKING_DIRECTORY ${MPLACE_HOME}
-  DEPENDS ${MPLACE_HOME}/src/macroPlace.i "src/tritonmp_external.cpp" "include/tritonmp/tritonmp_external.h"
+  DEPENDS ${MPLACE_HOME}/src/macroPlace.i "src/TritonMacroPlace.cpp" "include/tritonmp/TritonMacroPlace.h"
 )
 
 add_custom_command(OUTPUT ${MPLACE_TCL_INIT}
@@ -69,7 +69,7 @@ add_library( TritonMacroPlace
   src/parse.cpp
   src/graph.cpp
   src/macro.cpp
-  src/tritonmp_external.cpp
+  src/TritonMacroPlace.cpp
   src/macroPlace.cpp
   src/MakeTritonMp.cpp
   ${MPLACE_WRAP}
