ABKCommon rm sgi hash map, set

--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,4 @@
-*.log
-*.swo
-*.swd
-*.swp
-*.bak
-*.o
-*.sh
-*.v
-*/**/*.o
-
 build
-build/*
-
-src/output
-src/output/*
-
-test/*/exp
+TAGS
+*~
 test/results
-
-CMakeCache.txt
-CMakeFiles
-install_manifest.txt
-*.cmake
-Makefile
