--- a/module/ParquetFP/CMakeLists.txt
+++ b/module/ParquetFP/CMakeLists.txt
@@ -5,11 +5,6 @@ project(ParquetFP
 
 cmake_minimum_required(VERSION 2.6)
 
-set(PARQUET_HOME ${CMAKE_CURRENT_SOURCE_DIR})
-set(ABKCOMMON_HOME ${CMAKE_CURRENT_SOURCE_DIR}/../ABKCommon)
-
-message(STATUS "ParquetFP_home: ${PARQUET_HOME}")
-
 ############################################################
 # Create a library for PARQUET
 ############################################################
@@ -29,10 +24,6 @@ set( PARQUET_SRC
   src/DB.cxx
 #  src/debug.cxx
   src/FPcommon.cxx
-  #  src/FPEvalTest1.cxx
-  #  src/FPEvalTest2.cxx
-  #  src/FPEvalTest3.cxx
-  #  src/FPEvalTest4.cxx
   src/mixedpacking.cxx
   src/mixedpackingfromdb.cxx
   src/Net.cxx
@@ -90,43 +81,17 @@ set ( PARQUET_HEADER
   src/SPeval.h
 )
 
-add_library( ParquetFP STATIC ${PARQUET_SRC} )
-add_executable( ParquetFPexe 
-  ${PARQUET_SRC} 
-  )
-
-
-set_target_properties( ParquetFP
-  PROPERTIES
-  ARCHIVE_OUTPUT_DIRECTORY ${PARQUET_HOME}/lib
-  LIBRARY_OUTPUT_DIRECTORY ${PARQUET_HOME}/lib
-  RUNTIME_OUTPUT_DIRECTORY ${PARQUET_HOME}/lib
-)
+add_library( ParquetFP ${PARQUET_SRC} )
 
 # include directory settings
 target_include_directories( ParquetFP
   PUBLIC
   ${ABKCOMMON_HOME}
   ${PARQUET_HOME}
-  src/
   )
-
-target_include_directories( ParquetFPexe
-  PUBLIC
-  ${ABKCOMMON_HOME}
-  ${PARQUET_HOME}
-  src/
-  )
-
-target_link_libraries( ParquetFPexe 
-  ${ABKCOMMON_HOME}/lib/libABKCommon.a 
-  )
-
-# add_dependencies( cParquetFPzlib cParquetFP )
 
 ######################################################
 # install
 
 install(FILES ${PARQUET_HEADERS} DESTINATION include)
 install(TARGETS ParquetFP DESTINATION lib)
-
