--- a/jenkins/Dockerfile.dev
+++ b/jenkins/Dockerfile.dev
@@ -14,7 +14,7 @@ RUN yum -y install centos-release-scl
 RUN yum install -y gcc gcc-c++ make wget git boost-devel zlib-devel tcl-devel tk-devel swig bison flex
 
 # Install python dev
-#RUN yum install -y https://centos7.iuscommunity.org/ius-release.rpm && \
+#RUN yum install -y https://repo.ius.io/ius-release-el7.rpm && \
 #    yum update -y && \
 #    yum install -y python36u python36u-libs python36u-devel python36u-pip
 
